[gd_scene load_steps=8 format=2]

[ext_resource path="res://art/knight.png" type="Texture" id=1]
[ext_resource path="res://trash/knightrigid.gd" type="Script" id=2]


[sub_resource type="CircleShape2D" id=1]
radius = 17.827

[sub_resource type="Animation" id=2]
resource_name = "attack"
length = 0.3
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 3, 4, 5 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("hitbox/CollisionShape2D2:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8.15836, 22.501 )

[node name="knightrigid" type="RigidBody2D"]
light_mask = 525
collision_layer = 525
collision_mask = 525
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 3.21414, -0.147416 )
rotation = 1.5708
texture = ExtResource( 1 )
hframes = 6
frame = 3
region_rect = Rect2( -6, 0, 449.225, 185.717 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
light_mask = 525
position = Vector2( 0.0439072, 0.0906601 )
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 0.5, 0.5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/run = SubResource( 4 )

[node name="hitbox" type="Area2D" parent="."]
light_mask = 5
collision_layer = 37
collision_mask = 37

[node name="CollisionShape2D2" type="CollisionShape2D" parent="hitbox"]
light_mask = 37
position = Vector2( 33.8329, 0.0184941 )
shape = SubResource( 5 )
disabled = true

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4

[node name="Bar" type="ColorRect" parent="."]
margin_left = -10.2871
margin_top = -14.3764
margin_right = 19.7129
margin_bottom = -13.3764
rect_rotation = 90.0
color = Color( 0.180392, 0.282353, 0.831373, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stamina" type="ColorRect" parent="."]
margin_left = -3.56864
margin_top = -16.3604
margin_right = 26.4314
margin_bottom = -15.3604
rect_rotation = 90.0
color = Color( 0.301961, 0.756863, 0.152941, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.2
autostart = true
[connection signal="body_entered" from="hitbox" to="." method="_on_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_Timer2_timeout"]
